# linkforge

./: .all-contributorsrc  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  VISION.md  blender_launcher.py  blender_manifest.toml  build_extension.py  clean.sh  pyproject.toml  release-please-config.json  run_blender_tests.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-blender/: action.yml
.github/workflows/: blender_tests.yml  ci.yml  codeql.yml  release-please.yml  release.yml
core/: LICENSE  README.md  pyproject.toml
core/src/linkforge_core/: __init__.py  base.py  exceptions.py
core/src/linkforge_core/composer/: __init__.py  factories.py  naming.py  robot_assembly.py
core/src/linkforge_core/generators/: __init__.py  srdf_generator.py  urdf_generator.py  xacro_generator.py  xml_base.py
core/src/linkforge_core/models/: __init__.py  gazebo.py  geometry.py  graph.py  joint.py  link.py  material.py  robot.py  ros2_control.py  sensor.py  srdf.py  transmission.py
core/src/linkforge_core/parsers/: __init__.py  srdf_parser.py  urdf_parser.py  xacro_parser.py  xml_base.py
core/src/linkforge_core/physics/: inertia.py
core/src/linkforge_core/utils/: dict_utils.py  kinematics.py  path_utils.py  string_utils.py  xml_utils.py
core/src/linkforge_core/validation/: __init__.py  checks.py  security.py  validator.py
core/tests/unit/core/: test_xacro_namespaced.py
docs/: .gitignore  Makefile  README.md  requirements.txt
docs/decisions/: ADR-001-monorepo-structure.md
docs/source/: THIRD_PARTY_LICENSES.md  citation.md  conf.py  getting_started.md  index.md
docs/source/api/: generators.md  index.md  parsers.md
docs/source/explanation/: ARCHITECTURE.md  data_model.md  development.md  faq.md  index.md
docs/source/how_to/: add_sensors.md  best_practices.md  collision_geometry.md  control_dashboard.md  index.md  joint_viz.md  physics.md  transmissions.md  troubleshooting.md
docs/source/reference/: glossary.md  index.md  robot_structure.md
docs/source/tutorials/: building_diff_drive.md  index.md
docs/testing/: manual_qa.md
examples/: diff_drive_robot.urdf  mobile_robot.urdf  quadruped_robot.urdf  roundtrip_test_robot.urdf
examples/robot_assembly/srdf/: adapter.srdf.xacro  endeffector.srdf.xacro  robot.srdf.xacro
examples/robot_assembly/urdf/: adapter.urdf.xacro  endeffector.urdf.xacro  robot.urdf.xacro
examples/srdf/: pr2.srdf
examples/urdf/: diff_drive_robot.urdf  mobile_robot.urdf  quadruped_robot.urdf  roundtrip_test_robot.urdf
examples/xacro/: roundtrip.xacro
examples/xacro/imports/: materials.xacro
examples/xacro/macros/: inertials.xacro
linkforge/: __init__.py
linkforge/blender/: __init__.py  converters.py  handlers.py  mesh_export.py  preferences.py  scene_builder.py  urdf_importer.py
linkforge/blender/operators/: __init__.py  control_ops.py  export_ops.py  import_ops.py  joint_ops.py  link_ops.py  sensor_ops.py  transmission_ops.py
linkforge/blender/panels/: __init__.py  build_panel.py  control_panel.py  export_panel.py  forge_panel.py  joint_panel.py  link_panel.py  robot_panel.py  sensor_panel.py  transmission_panel.py
linkforge/blender/properties/: __init__.py  control_props.py  joint_props.py  link_props.py  robot_props.py  sensor_props.py  transmission_props.py  validation_props.py
linkforge/blender/utils/: __init__.py  converters.py  joint_gizmos.py  mesh_export.py  property_helpers.py  transform_utils.py  urdf_importer.py
linkforge/core/: __init__.py  base.py  logging_config.py  urdf_generator.py  xacro_generator.py
linkforge/core/generators/: __init__.py  urdf.py  xacro.py
linkforge/core/models/: __init__.py  gazebo.py  geometry.py  joint.py  link.py  material.py  robot.py  ros2_control.py  sensor.py  transmission.py
linkforge/core/parsers/: __init__.py  urdf_parser.py
linkforge/core/physics/: __init__.py  inertia.py
linkforge/core/utils/: __init__.py  math_utils.py  string_utils.py
linkforge/core/validation/: __init__.py  result.py  security.py  validator.py
tests/: README.md  blender_test_runner.py  conftest.py
tests/core/: test_advanced_urdf_roundtrip.py  test_inertia_formulas.py  test_joint.py  test_material.py  test_security.py  test_sensor.py  test_transmissions_comprehensive.py  test_urdf_string_parser.py  test_xacro_completeness.py  test_xacro_dimensions.py  test_xacro_includes.py  test_xacro_macros.py  test_xacro_split_export.py
tests/integration/: test_advanced_urdf_roundtrip.py  test_comprehensive_roundtrip.py  test_example_files.py  test_inertia.py  test_multi_visual_collision.py  test_non_origin_base_link.py  test_perfect_roundtrip.py  test_roundtrip.py  test_stacked_links.py  test_transmissions_comprehensive.py  test_urdf_parser.py  test_visual_origin_roundtrip.py  test_xacro_completeness.py  test_xacro_dimensions.py  test_xacro_macros.py  test_xacro_split_export.py
tests/integration/blender/: test_comprehensive_roundtrip.py  test_perfect_roundtrip.py  test_roundtrip.py  test_visual_origin_roundtrip.py
tests/integration/core/: test_empty_xacro.py  test_inertia.py  test_joint_roundtrip.py  test_multi_visual_collision.py  test_robot_assembly.py  test_srdf_integration.py  test_transmission.py  test_transmissions_comprehensive.py  test_urdf_examples.py  test_urdf_parser.py  test_xacro_completeness.py  test_xacro_dimensions.py  test_xacro_examples.py  test_xacro_includes.py  test_xacro_macros.py  test_xacro_split_export.py  test_xacro_standard_features.py
tests/integration/parsers/: test_urdf_parser.py
tests/unit/blender/: conftest.py  test_async_builder.py  test_blender_to_core.py  test_blender_utils.py  (+30 more)
tools/: convert_xacro.py
wheels/: PyYAML-6.0.1-cp310-cp310-macosx_11_0_arm64.whl  rospkg-1.6.0-py3-none-any.whl  rospkg-1.6.1-py3-none-any.whl  xacrodoc-1.3.0-py3-none-any.whl  xacrodoc-1.3.1-py3-none-any.whl
(+60 files in other folders)
