[project]
name = "linkforge-workspace"
version = "1.2.1" # x-release-please-version
description = "Universal Robotics Interoperability Workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["core", "platforms/blender"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
    "myst-parser>=2.0.0",
    "sphinx>=7.2.6",
    "sphinx-autodoc-typehints>=2.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinxcontrib-mermaid>=0.9.2",
    "sphinx-design>=0.5.0",
]

# Shared Tool Configs
[tool.pytest.ini_options]
testpaths = ["tests/unit/core"]
pythonpath = ["core/src", "platforms/blender"]
addopts = ["--verbose", "--cov=linkforge_core", "--cov=platforms/blender/linkforge"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501", "N801"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"platforms/blender/**/*.py" = ["F821"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "bpy.*"
ignore_missing_imports = true
