[project]
name = "linkforge-core"
version = "1.3.0" # x-release-please-version
description = "Universal Robotics Interoperability Core"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
